Remove icon tag and add html code for copyright symbol

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <!--fourth container-->
         <div id="fourth-container">
             <footer>
-                <i class="material-icons">&#xe90c;</i>
-                <p id="year-author">2019 chelmerrox</p>
+                <p id="copyright-year-author"> &copy; 2019 chelmerrox</p>
             </footer>
         </div>
         
